--- a/GHISLER/CONFIG/2560x1440.ini
+++ b/GHISLER/CONFIG/2560x1440.ini
@@ -55,14 +55,14 @@ DriveSelDX=320
 DriveSelDY=250
 DriveSelMax=0
 FontSize=9
-FontName=ë§‘ì€ ê³ ë”•
+FontName=¸¼Àº °íµñ
 FontCharset=0
 FontSizeWindow=9
-FontNameWindow=ë§‘ì€ ê³ ë”•
+FontNameWindow=¸¼Àº °íµñ
 FontCharsetWindow=0
 FontWeight=700
 FontWeightWindow=700
-FontNameDialog=ë§‘ì€ ê³ ë”•
+FontNameDialog=¸¼Àº °íµñ
 FontSizeDialog=9
 FontCharsetDialog=0
 FontWeightDialog=700
