--- a/GHISLER/CONFIG/AllResolutions.ini
+++ b/GHISLER/CONFIG/AllResolutions.ini
@@ -2,12 +2,12 @@
 
 
 FontSize=9
-FontName=ë§‘ì€ ê³ ë”•
+FontName=¸¼Àº °íµñ
 FontSizeWindow=9
-FontNameWindow=ë§‘ì€ ê³ ë”•
+FontNameWindow=¸¼Àº °íµñ
 FontWeight=700
 FontWeightWindow=700
-FontNameDialog=ë§‘ì€ ê³ ë”•
+FontNameDialog=¸¼Àº °íµñ
 FontWeightDialog=700
 FontCharset=0
 FontCharsetWindow=0
