--- a/GHISLER/CONFIG/DirMenu.ini
+++ b/GHISLER/CONFIG/DirMenu.ini
@@ -143,8 +143,8 @@ menu78=03_my_script
 cmd78=cd d:\12_dev\03_visual_lisp\03_my_script
 menu79=02_Book
 cmd79=cd d:\02_Book
-menu80=08_ë‚˜ì˜ì‘ì—…
-cmd80=cd d:\08_ë‚˜ì˜ì‘ì—…
+menu80=08_³ªÀÇÀÛ¾÷
+cmd80=cd d:\08_³ªÀÇÀÛ¾÷\
 menu81=04_mp3
 cmd81=cd d:\04_mp3
 menu82=05_Send
