--- a/GHISLER/CONFIG/LeftRight.ini
+++ b/GHISLER/CONFIG/LeftRight.ini
@@ -1,6 +1,6 @@
 
 [left]
-path=d:\05_Send\
+path=C:\
 ViewMode=0
 activepanelcolor=-1
 activepanelcolor2=-1
@@ -12,7 +12,6 @@ activepanelcolordark=-1
 activepanelcolordark2=-1
 userspec=*.*
 customsortorder=0
-AutoViewMode=1
 
 
 [right]
@@ -66,8 +65,9 @@ XPstyle=1
 3_options=6|0|0|0|0|1|0|
 4_path=c:\Users\minhwasoo\Downloads\
 4_options=6|0|0|0|0|1|0|
-activetab=5
-activelocked=1
+5_path=d:\05_Send\
+5_options=6|0|0|0|0|1|0|||0|1
+activetab=6
 [righttabs]
 0_path=d:\11_exaData\
 0_options=1|0|0|0|0|1|0|
