--- a/GHISLER/CONFIG/Plugins.ini
+++ b/GHISLER/CONFIG/Plugins.ini
@@ -1,9 +1,5 @@
 
 
-
-
-
-
 [FileSystemPlugins]
 Cloud=C:\Program Files\totalcmd\plugins\wfx\cloudplugin\cloudplugin.wfx
 Secure FTP=C:\Program Files\totalcmd\plugins\wfx\sftpplug\sftpplug.wfx
@@ -26,15 +22,19 @@ FSE=1
 0=C:\Program Files\totalcmd\plugins\wdx\DirSizeCalc\DirSizeCalc.wdx
 1=C:\Program Files\totalcmd\plugins\wdx\TextSearch\TextSearch.wdx
 2=C:\Program Files\totalcmd\plugins\wdx\EmptyCheck\EmptyCheck.wdx
+3=C:\Program Files\totalcmd\plugins\wdx\FileX\FileX.WDX
 0_detect=
 1_detect=
 2_detect=
+3_detect=
 2_date=1160286627
 2_flags=0
+3_date=1060418390
+3_flags=0
+
 [ContentPlugins64]
-$checksum$=2258394382
+$checksum$=3080289357
 0=1
 1=1
 2=1
-
-
+3=1
