--- a/GHISLER/CONFIG/Searches.ini
+++ b/GHISLER/CONFIG/Searches.ini
@@ -44,23 +44,23 @@ EmptyCheck_plugin=emptycheck.Empty = 1
 13=ico
 
 [SearchIn]
-0=z:\11_exaData\06_util
-1=d:\11_exaData\06_util
-2=z:\11_exaData\04_dev
-3=y:\A1_exaVideo
-4=d:\09_hardRain\08_ihanseol - 2023
-5=d:\02_Book
-6=z:\11_exaData\03_Design
-7=z:\11_exaData\05_OS
-8=z:\11_exaData\08_Microsoft Office
-9=z:\11_exaData\07_Font
-10=z:\09_hardRain\A1_jeong_cheon
-11=z:\09_hardRain\07_ihanseol - 2022
-12=z:\09_hardRain\06_ihanseol - 2021
-13=z:\09_hardRain\05_ihanseol - 2020
-14=z:\09_hardRain\04_ihanseol - 2019
-15=z:\09_hardRain\03_ihanseol - 2018
-16=z:\09_hardRain\02_ihanseol - 2017
-17=z:\09_hardRain\01_2017
-18=d:\11_exaData\05_OS
-19=f:\11_exaData\04_dev
+0=d:\02_Book
+1=d:\05_Send
+2=x:\09_hardRain\05_ihanseol - 2020
+3=d:\09_hardRain\07_ihanseol - 2022
+4=z:\11_exaData\06_util
+5=d:\11_exaData\06_util
+6=z:\11_exaData\04_dev
+7=y:\A1_exaVideo
+8=d:\09_hardRain\08_ihanseol - 2023
+9=z:\11_exaData\03_Design
+10=z:\11_exaData\05_OS
+11=z:\11_exaData\08_Microsoft Office
+12=z:\11_exaData\07_Font
+13=z:\09_hardRain\A1_jeong_cheon
+14=z:\09_hardRain\07_ihanseol - 2022
+15=z:\09_hardRain\06_ihanseol - 2021
+16=z:\09_hardRain\05_ihanseol - 2020
+17=z:\09_hardRain\04_ihanseol - 2019
+18=z:\09_hardRain\03_ihanseol - 2018
+19=z:\09_hardRain\02_ihanseol - 2017
