--- a/GHISLER/CONFIG/Plugins.ini
+++ b/GHISLER/CONFIG/Plugins.ini
@@ -19,22 +19,15 @@ FSE=1
 
 
 [ContentPlugins]
-0=C:\Program Files\totalcmd\plugins\wdx\DirSizeCalc\DirSizeCalc.wdx
-1=C:\Program Files\totalcmd\plugins\wdx\TextSearch\TextSearch.wdx
-2=C:\Program Files\totalcmd\plugins\wdx\EmptyCheck\EmptyCheck.wdx
-3=C:\Program Files\totalcmd\plugins\wdx\FileX\FileX.WDX
+0=%COMMANDER_PATH%\plugins\wdx\DirSizeCalc\DirSizeCalc.wdx
+1=%COMMANDER_PATH%\plugins\wdx\TextSearch\TextSearch.wdx
+2=%COMMANDER_PATH%\plugins\wdx\EmptyCheck\EmptyCheck.wdx
 0_detect=
 1_detect=
 2_detect=
-3_detect=
-2_date=1160286627
-2_flags=0
-3_date=1060418390
-3_flags=0
 
 [ContentPlugins64]
-$checksum$=3080289357
+$checksum$=2789492332
 0=1
 1=1
 2=1
-3=1
