--- a/GHISLER/WINCMD.INI
+++ b/GHISLER/WINCMD.INI
@@ -220,3 +220,5 @@ DeleteEmptyFolders_Flags=25|63|6
 [CompareCustomField]
 0exts=>Find Empty Directory
 0fields=emp
+[DisabledPlugins]
+ContentPlugins;%COMMANDER_PATH%\plugins\wdx\FileX\FileX.WDX;3;=
