--- a/GHISLER/CONFIG/LeftRight.ini
+++ b/GHISLER/CONFIG/LeftRight.ini
@@ -1,6 +1,6 @@
 
 [left]
-path=d:\05_Send\
+path=c:\Users\minhwasoo\Downloads\
 ViewMode=0
 activepanelcolor=-1
 activepanelcolor2=-1
@@ -12,12 +12,11 @@ activepanelcolordark=-1
 activepanelcolordark2=-1
 userspec=*.*
 customsortorder=0
-AutoViewMode=1
 
 
 [right]
-path=c:\Users\minhwasoo\Desktop\
-ViewMode=0
+path=d:\09_hardRain\08_ihanseol - 2023\Z01_소소한작업들\
+ViewMode=-1
 activepanelcolor=-1
 activepanelcolor2=-1
 ShowAllDetails=1
@@ -64,18 +63,19 @@ XPstyle=1
 2_options=6|0|0|0|0|1|0|
 3_path=c:\Users\minhwasoo\
 3_options=6|0|0|0|0|1|0|
-4_path=c:\Users\minhwasoo\Downloads\
-4_options=6|0|0|0|0|1|0|
-activetab=5
+4_path=d:\05_Send\
+4_options=6|0|0|0|0|1|0|||0|1
+activetab=4
 activelocked=1
 [righttabs]
 0_path=d:\11_exaData\
 0_options=1|0|0|0|0|1|0|
 1_path=d:\12_dev\
 1_options=1|0|0|0|0|1|0|
-2_path=c:\Users\minhwasoo\Downloads\
+2_path=c:\Users\minhwasoo\Desktop\
 2_options=1|0|0|0|0|1|0|
-3_path=d:\09_hardRain\08_ihanseol - 2023\
+3_path=c:\Users\minhwasoo\Downloads\
 3_options=1|0|0|0|0|1|0|
-activetab=2
-activelocked=1
+4_path=d:\09_hardRain\08_ihanseol - 2023\
+4_options=1|0|0|0|0|1|0|
+activetab=5
