--- a/GHISLER/CONFIG/Plugins.ini
+++ b/GHISLER/CONFIG/Plugins.ini
@@ -1,5 +1,9 @@
 
 
+
+
+
+
 [FileSystemPlugins]
 Cloud=C:\Program Files\totalcmd\plugins\wfx\cloudplugin\cloudplugin.wfx
 Secure FTP=C:\Program Files\totalcmd\plugins\wfx\sftpplug\sftpplug.wfx
@@ -19,15 +23,18 @@ FSE=1
 
 
 [ContentPlugins]
-0=%COMMANDER_PATH%\plugins\wdx\DirSizeCalc\DirSizeCalc.wdx
-1=%COMMANDER_PATH%\plugins\wdx\TextSearch\TextSearch.wdx
-2=%COMMANDER_PATH%\plugins\wdx\EmptyCheck\EmptyCheck.wdx
+0=C:\Program Files\totalcmd\plugins\wdx\DirSizeCalc\DirSizeCalc.wdx
+1=C:\Program Files\totalcmd\plugins\wdx\TextSearch\TextSearch.wdx
+2=C:\Program Files\totalcmd\plugins\wdx\EmptyCheck\EmptyCheck.wdx
 0_detect=
 1_detect=
 2_detect=
-
+2_date=1160286627
+2_flags=0
 [ContentPlugins64]
-$checksum$=2789492332
+$checksum$=2258394382
 0=1
 1=1
 2=1
+
+
