--- a/GHISLER/CONFIG/Selection.ini
+++ b/GHISLER/CONFIG/Selection.ini
@@ -1,8 +1,8 @@
 [Selection]
-0=*.*
-1=*.ttf
-2=*.txt
-3=*.otf
+0=*.ttf
+1=*.txt
+2=*.otf
+3=*.*
 4=*.png
 5=*.bar
 6=*.ico
@@ -19,3 +19,4 @@
 17=profile*
 18=setup*.dll
 19=*.hgl
+20=*.jpg
