--- a/GHISLER/CONFIG/LeftRight.ini
+++ b/GHISLER/CONFIG/LeftRight.ini
@@ -5,23 +5,23 @@ ViewMode=0
 activepanelcolor=-1
 activepanelcolor2=-1
 ShowAllDetails=1
-SpecialView=3
-show=3
+SpecialView=0
+show=1
 negative Sortorder=0
 activepanelcolordark=-1
 activepanelcolordark2=-1
 userspec=*.*
-customsortorder=0
+sortorder=0
 
 
 [right]
-path=d:\09_hardRain\08_ihanseol - 2023\Z01_소소한작업들\
-ViewMode=-1
+path=d:\12_dev\
+ViewMode=0
 activepanelcolor=-1
 activepanelcolor2=-1
 ShowAllDetails=1
 SpecialView=0
-show=3
+show=1
 sortorder=0
 negative Sortorder=0
 activepanelcolordark=-1
@@ -55,27 +55,18 @@ XPstyle=1
 
 
 [lefttabs]
-0_path=c:\Users\minhwasoo\Pictures\
+0_path=c:\Users\minhwasoo\Desktop\
 0_options=1|0|0|0|0|1|0|
 1_path=c:\Users\minhwasoo\Documents\
 1_options=1|0|0|0|0|1|0|
-2_path=c:\Users\minhwasoo\Desktop\
-2_options=6|0|0|0|0|1|0|
-3_path=c:\Users\minhwasoo\
-3_options=6|0|0|0|0|1|0|
-4_path=d:\05_Send\
-4_options=6|0|0|0|0|1|0|||0|1
-activetab=4
+2_path=c:\Users\minhwasoo\Pictures\
+2_options=1|0|0|0|0|1|0|
+3_path=d:\05_Send\
+3_options=1|0|0|0|0|1|0|
+activetab=3
 activelocked=1
 [righttabs]
-0_path=d:\11_exaData\
+0_path=d:\11_exaData\06_util\
 0_options=1|0|0|0|0|1|0|
-1_path=d:\12_dev\
-1_options=1|0|0|0|0|1|0|
-2_path=c:\Users\minhwasoo\Desktop\
-2_options=1|0|0|0|0|1|0|
-3_path=c:\Users\minhwasoo\Downloads\
-3_options=1|0|0|0|0|1|0|
-4_path=d:\09_hardRain\08_ihanseol - 2023\
-4_options=1|0|0|0|0|1|0|
-activetab=5
+activetab=1
+activelocked=1
