--- a/GHISLER/usercmd.ini
+++ b/GHISLER/usercmd.ini
@@ -56,8 +56,8 @@ menu=Open PowerShell
 
 
 [em_WindowsTerminal]
-button=C:\Program Files\WindowsApps\Microsoft.WindowsTerminal_1.15.3465.0_x64__8wekyb3d8bbwe\wt.exe
-cmd=C:\Program Files\WindowsApps\Microsoft.WindowsTerminal_1.15.3465.0_x64__8wekyb3d8bbwe\wt.exe
+button=c:\Users\minhwasoo\AppData\Local\Microsoft\WindowsApps\wt.exe
+cmd=c:\Users\minhwasoo\AppData\Local\Microsoft\WindowsApps\wt.exe
 menu=Open Windows Terminal
 
 
