--- a/GHISLER/CONFIG/DirMenu.ini
+++ b/GHISLER/CONFIG/DirMenu.ini
@@ -114,50 +114,52 @@ menu62=gitbash - mergetools
 cmd62=cd C:\Program Files\Git\mingw64\libexec\git-core\mergetools
 menu63=--
 menu64=-Appdata and Local
-menu65=Sublime Installed Packages
-cmd65=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Installed Packages
-menu66=Sublime Packages
-cmd66=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages
-menu67=Sublime Packages User
-cmd67=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages\User
-menu68=FlowLauncher CustomIcons
-cmd68=cd C:\Users\minhwasoo\AppData\Roaming\FlowLauncher\Settings\Plugins\Flow.Launcher.Plugin.WebSearch\CustomIcons
-menu69=Bing WPImages
-cmd69=cd C:\Users\minhwasoo\AppData\Local\Microsoft\BingWallpaperApp\WPImages
-menu70=AppData Local
-cmd70=cd C:\Users\minhwasoo\AppData\Local
-menu71=AddData Roaming
-cmd71=cd C:\Users\minhwasoo\AppData\Roaming
-menu72=WindowsTerminal Setting
-cmd72=cd C:\Users\minhwasoo\AppData\Local\Packages\Microsoft.WindowsTerminal_8wekyb3d8bbwe\LocalState
-menu73=ProgramData
-cmd73=cd C:\ProgramData
-menu74=--
-menu75=00_Emule
-cmd75=cd C:\ProgramData\00_Emule
-menu76=02_ROMS
-cmd76=cd d:\11_exaData\10_Game\02_ROMS
-menu77=03_download
-cmd77=cd d:\03_download
-menu78=03_my_script
-cmd78=cd d:\12_dev\03_visual_lisp\03_my_script
-menu79=02_Book
-cmd79=cd d:\02_Book
-menu80=08_나의작업
-cmd80=cd d:\08_나의작업\
-menu81=04_mp3
-cmd81=cd d:\04_mp3
-menu82=05_Send
-cmd82=cd d:\05_Send
-menu83=06_Send2
-cmd83=cd d:\06_Send2
-menu84=12_dev
-cmd84=cd d:\12_dev
-menu85=C:_Temp
-cmd85=cd c:\Temp
-menu86=e: download
-cmd86=cd e:\download
-menu87=Bing
-cmd87=cd d:\10_photo\Desktop Pictures\bing
-menu88=NAS4DUAL 06_util
-cmd88=cd z:\11_exaData\06_util
+menu65=d:/12_dev/  Action and Configuration
+cmd65=cd d:\12_dev\01_Linux\08_wincmd.ini\Action and Configuration
+menu66=Sublime Installed Packages
+cmd66=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Installed Packages
+menu67=Sublime Packages
+cmd67=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages
+menu68=Sublime Packages User
+cmd68=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages\User
+menu69=FlowLauncher CustomIcons
+cmd69=cd C:\Users\minhwasoo\AppData\Roaming\FlowLauncher\Settings\Plugins\Flow.Launcher.Plugin.WebSearch\CustomIcons
+menu70=Bing WPImages
+cmd70=cd C:\Users\minhwasoo\AppData\Local\Microsoft\BingWallpaperApp\WPImages
+menu71=AppData Local
+cmd71=cd C:\Users\minhwasoo\AppData\Local
+menu72=AddData Roaming
+cmd72=cd C:\Users\minhwasoo\AppData\Roaming
+menu73=WindowsTerminal Setting
+cmd73=cd C:\Users\minhwasoo\AppData\Local\Packages\Microsoft.WindowsTerminal_8wekyb3d8bbwe\LocalState
+menu74=ProgramData
+cmd74=cd C:\ProgramData
+menu75=--
+menu76=00_Emule
+cmd76=cd C:\ProgramData\00_Emule
+menu77=02_ROMS
+cmd77=cd d:\11_exaData\10_Game\02_ROMS
+menu78=03_download
+cmd78=cd d:\03_download
+menu79=03_my_script
+cmd79=cd d:\12_dev\03_visual_lisp\03_my_script
+menu80=02_Book
+cmd80=cd d:\02_Book
+menu81=08_나의작업
+cmd81=cd d:\08_나의작업\
+menu82=04_mp3
+cmd82=cd d:\04_mp3
+menu83=05_Send
+cmd83=cd d:\05_Send
+menu84=06_Send2
+cmd84=cd d:\06_Send2
+menu85=12_dev
+cmd85=cd d:\12_dev
+menu86=C:_Temp
+cmd86=cd c:\Temp
+menu87=e: download
+cmd87=cd e:\download
+menu88=Bing
+cmd88=cd d:\10_photo\Desktop Pictures\bing
+menu89=NAS4DUAL 06_util
+cmd89=cd z:\11_exaData\06_util
