--- a/GHISLER/CONFIG/LeftRight.ini
+++ b/GHISLER/CONFIG/LeftRight.ini
@@ -1,6 +1,6 @@
 
 [left]
-path=c:\Users\minhwasoo\Downloads\
+path=d:\05_Send\
 ViewMode=0
 activepanelcolor=-1
 activepanelcolor2=-1
@@ -15,7 +15,7 @@ sortorder=0
 
 
 [right]
-path=d:\12_dev\
+path=c:\Users\minhwasoo\Downloads\
 ViewMode=0
 activepanelcolor=-1
 activepanelcolor2=-1
@@ -61,12 +61,14 @@ XPstyle=1
 1_options=1|0|0|0|0|1|0|
 2_path=c:\Users\minhwasoo\Pictures\
 2_options=1|0|0|0|0|1|0|
-3_path=d:\05_Send\
+3_path=c:\Users\minhwasoo\Downloads\
 3_options=1|0|0|0|0|1|0|
-activetab=3
+activetab=4
 activelocked=1
 [righttabs]
 0_path=d:\11_exaData\06_util\
 0_options=1|0|0|0|0|1|0|
-activetab=1
+1_path=d:\12_dev\
+1_options=1|0|0|0|0|1|0|
+activetab=2
 activelocked=1
