--- a/GHISLER/CONFIG/Selection.ini
+++ b/GHISLER/CONFIG/Selection.ini
@@ -1,22 +1,22 @@
 [Selection]
-0=*.ttf
-1=*.txt
-2=*.otf
-3=*.*
-4=*.png
-5=*.bar
-6=*.ico
-7=*.icl
-8=|*\
-9=|*
-10=*.mun
-11=*.dll
-12=*.exe
-13=jpg,jpeg
-14=*.icc
-15=*.ktw
-16=p*
-17=profile*
-18=setup*.dll
-19=*.hgl
-20=*.jpg
+0=*.smi
+1=*.*
+2=*.ttf
+3=*.txt
+4=*.otf
+5=*.png
+6=*.bar
+7=*.ico
+8=*.icl
+9=|*\
+10=|*
+11=*.mun
+12=*.dll
+13=*.exe
+14=jpg,jpeg
+15=*.icc
+16=*.ktw
+17=p*
+18=profile*
+19=setup*.dll
+20=*.hgl
