--- a/GHISLER/CONFIG/LeftRight.ini
+++ b/GHISLER/CONFIG/LeftRight.ini
@@ -1,7 +1,7 @@
 
 [left]
-path=d:\11_exaData\06_util\
-ViewMode=-1
+path=d:\05_Send\
+ViewMode=0
 activepanelcolor=-1
 activepanelcolor2=-1
 ShowAllDetails=1
@@ -15,8 +15,8 @@ sortorder=0
 
 
 [right]
-path=z:\11_exaData\06_util\
-ViewMode=-1
+path=d:\09_hardRain\08_ihanseol - 2023\
+ViewMode=0
 activepanelcolor=-1
 activepanelcolor2=-1
 ShowAllDetails=1
@@ -63,9 +63,10 @@ XPstyle=1
 2_options=1|0|0|0|0|1|0|
 3_path=c:\Users\minhwasoo\Downloads\
 3_options=1|0|0|0|0|1|0|
-4_path=d:\05_Send\
+4_path=d:\11_exaData\06_util\
 4_options=1|0|0|0|0|1|0|
 activetab=5
+activelocked=1
 [righttabs]
 0_path=d:\11_exaData\06_util\
 0_options=1|0|0|0|0|1|0|
@@ -75,6 +76,5 @@ activetab=5
 2_options=1|0|0|0|0|1|0|
 3_path=d:\09_hardRain\07_ihanseol - 2022\
 3_options=1|0|0|0|0|1|0|
-4_path=d:\09_hardRain\08_ihanseol - 2023\
-4_options=1|0|0|0|0|1|0|
-activetab=5
+activetab=4
+activelocked=1
