--- a/GHISLER/CONFIG/Searches.ini
+++ b/GHISLER/CONFIG/Searches.ini
@@ -28,40 +28,41 @@ EmptyCheck_plugin=emptycheck.Empty = 1
 
 
 [SearchName]
-0=power
-1=launcher
-2=filemenu
-3=?„ì˜¤??
-4=ipython
-5=.bashrc
-6=debug
-7=profile
-8=run_profile_d*.*
-9=run_profile_d
-10=flow
-11=?€??
-12=?€ë°?
-13=TCNewLib1
-14=ico
+0=.netrc
+1=power
+2=launcher
+3=filemenu
+4=?„ì˜¤??
+5=ipython
+6=.bashrc
+7=debug
+8=profile
+9=run_profile_d*.*
+10=run_profile_d
+11=flow
+12=?€??
+13=?€ë°?
+14=TCNewLib1
+15=ico
 
 [SearchIn]
-0=d:\11_exaData\06_util
-1=z:\11_exaData\06_util
-2=z:\11_exaData\04_dev
-3=y:\A1_exaVideo
-4=d:\09_hardRain\08_ihanseol - 2023
-5=d:\02_Book
-6=z:\11_exaData\03_Design
-7=z:\11_exaData\05_OS
-8=z:\11_exaData\08_Microsoft Office
-9=z:\11_exaData\07_Font
-10=z:\09_hardRain\A1_jeong_cheon
-11=z:\09_hardRain\07_ihanseol - 2022
-12=z:\09_hardRain\06_ihanseol - 2021
-13=z:\09_hardRain\05_ihanseol - 2020
-14=z:\09_hardRain\04_ihanseol - 2019
-15=z:\09_hardRain\03_ihanseol - 2018
-16=z:\09_hardRain\02_ihanseol - 2017
-17=z:\09_hardRain\01_2017
-18=d:\11_exaData\05_OS
-19=f:\11_exaData\04_dev
+0=d:\12_dev
+1=d:\11_exaData\06_util
+2=z:\11_exaData\06_util
+3=z:\11_exaData\04_dev
+4=y:\A1_exaVideo
+5=d:\09_hardRain\08_ihanseol - 2023
+6=d:\02_Book
+7=z:\11_exaData\03_Design
+8=z:\11_exaData\05_OS
+9=z:\11_exaData\08_Microsoft Office
+10=z:\11_exaData\07_Font
+11=z:\09_hardRain\A1_jeong_cheon
+12=z:\09_hardRain\07_ihanseol - 2022
+13=z:\09_hardRain\06_ihanseol - 2021
+14=z:\09_hardRain\05_ihanseol - 2020
+15=z:\09_hardRain\04_ihanseol - 2019
+16=z:\09_hardRain\03_ihanseol - 2018
+17=z:\09_hardRain\02_ihanseol - 2017
+18=z:\09_hardRain\01_2017
+19=d:\11_exaData\05_OS
