--- a/GHISLER/usercmd.ini
+++ b/GHISLER/usercmd.ini
@@ -124,3 +124,8 @@ param=%p%n -op %t\
 menu=Unpack to Folder
 
 
+[em_ConvertUTF8-BOM]
+cmd=python "c:\Program Files\totalcmd\ini\config\convert_utf-8.py"
+param=""%P\%N""
+
+button=C:\Program Files\totalcmd\ini\icons dll\minhwasoo.icl,19
