--- a/GHISLER/CONFIG/LeftRight.ini
+++ b/GHISLER/CONFIG/LeftRight.ini
@@ -1,7 +1,7 @@
 
 [left]
-path=d:\05_Send\
-ViewMode=0
+path=d:\12_dev\02_Excel\07_LandSlide\08_WebScraper\04_Selenium New Form\
+ViewMode=-1
 activepanelcolor=-1
 activepanelcolor2=-1
 ShowAllDetails=1
@@ -15,7 +15,7 @@ sortorder=0
 
 
 [right]
-path=d:\09_hardRain\08_ihanseol - 2023\
+path=c:\Users\minhwasoo\Downloads\
 ViewMode=0
 activepanelcolor=-1
 activepanelcolor2=-1
@@ -65,16 +65,19 @@ XPstyle=1
 3_options=1|0|0|0|0|1|0|
 4_path=d:\11_exaData\06_util\
 4_options=1|0|0|0|0|1|0|
-activetab=5
-activelocked=1
+5_path=d:\05_Send\
+5_options=1|0|0|0|0|1|0|
+activetab=6
 [righttabs]
 0_path=d:\11_exaData\06_util\
 0_options=1|0|0|0|0|1|0|
 1_path=d:\12_dev\
 1_options=1|0|0|0|0|1|0|
-2_path=c:\Users\minhwasoo\Downloads\
+2_path=d:\09_hardRain\07_ihanseol - 2022\
 2_options=1|0|0|0|0|1|0|
-3_path=d:\09_hardRain\07_ihanseol - 2022\
+3_path=d:\09_hardRain\08_ihanseol - 2023\
 3_options=1|0|0|0|0|1|0|
-activetab=4
+4_path=d:\09_hardRain\08_ihanseol - 2023\00_data\a1_excel reference\05_Web Scraper\
+4_options=1|0|0|0|0|0|0|
+activetab=2
 activelocked=1
