--- a/GHISLER/usercmd.ini
+++ b/GHISLER/usercmd.ini
@@ -128,4 +128,5 @@ menu=Unpack to Folder
 cmd=python "c:\Program Files\totalcmd\ini\config\convert_utf-8.py"
 param=""%P\%N""
 
-button=C:\Program Files\totalcmd\ini\icons dll\minhwasoo.icl,19
+button=C:\Program Files\totalcmd\ini\icons dll\convert.icl,6
+menu=Convert cp949 ansi file to Utf-8 Bom
