--- a/GHISLER/CONFIG/Searches.ini
+++ b/GHISLER/CONFIG/Searches.ini
@@ -28,41 +28,43 @@ EmptyCheck_plugin=emptycheck.Empty = 1
 
 
 [SearchName]
-0=.netrc
-1=power
-2=launcher
-3=filemenu
-4=?„ì˜¤??
-5=ipython
-6=.bashrc
-7=debug
-8=profile
-9=run_profile_d*.*
-10=run_profile_d
-11=flow
-12=?€??
-13=?€ë°?
-14=TCNewLib1
-15=ico
+0=html
+1=exe
+2=.netrc
+3=power
+4=launcher
+5=filemenu
+6=?„ì˜¤??
+7=ipython
+8=.bashrc
+9=debug
+10=profile
+11=run_profile_d*.*
+12=run_profile_d
+13=flow
+14=?€??
+15=?€ë°?
+16=TCNewLib1
+17=ico
 
 [SearchIn]
-0=d:\12_dev
-1=d:\11_exaData\06_util
-2=z:\11_exaData\06_util
-3=z:\11_exaData\04_dev
-4=y:\A1_exaVideo
-5=d:\09_hardRain\08_ihanseol - 2023
-6=d:\02_Book
-7=z:\11_exaData\03_Design
-8=z:\11_exaData\05_OS
-9=z:\11_exaData\08_Microsoft Office
-10=z:\11_exaData\07_Font
-11=z:\09_hardRain\A1_jeong_cheon
-12=z:\09_hardRain\07_ihanseol - 2022
-13=z:\09_hardRain\06_ihanseol - 2021
-14=z:\09_hardRain\05_ihanseol - 2020
-15=z:\09_hardRain\04_ihanseol - 2019
-16=z:\09_hardRain\03_ihanseol - 2018
-17=z:\09_hardRain\02_ihanseol - 2017
-18=z:\09_hardRain\01_2017
-19=d:\11_exaData\05_OS
+0=d:\13_ÀüÁÖµµÀåÄÄ ÀÚ·á
+1=d:\13_ÀüÁÖµµÀåÄÄ ÀÚ·á\drive d\Temp
+2=d:\13_ÀüÁÖµµÀåÄÄ ÀÚ·á\drive d
+3=d:\12_dev
+4=d:\11_exaData\06_util
+5=z:\11_exaData\06_util
+6=z:\11_exaData\04_dev
+7=y:\A1_exaVideo
+8=d:\09_hardRain\08_ihanseol - 2023
+9=d:\02_Book
+10=z:\11_exaData\03_Design
+11=z:\11_exaData\05_OS
+12=z:\11_exaData\08_Microsoft Office
+13=z:\11_exaData\07_Font
+14=z:\09_hardRain\A1_jeong_cheon
+15=z:\09_hardRain\07_ihanseol - 2022
+16=z:\09_hardRain\06_ihanseol - 2021
+17=z:\09_hardRain\05_ihanseol - 2020
+18=z:\09_hardRain\04_ihanseol - 2019
+19=z:\09_hardRain\03_ihanseol - 2018
