--- a/GHISLER/CONFIG/LeftRight.ini
+++ b/GHISLER/CONFIG/LeftRight.ini
@@ -1,7 +1,7 @@
 
 [left]
-path=d:\12_dev\02_Excel\07_LandSlide\08_WebScraper\04_Selenium New Form\
-ViewMode=-1
+path=d:\05_Send\
+ViewMode=0
 activepanelcolor=-1
 activepanelcolor2=-1
 ShowAllDetails=1
@@ -15,13 +15,13 @@ sortorder=0
 
 
 [right]
-path=c:\Users\minhwasoo\Downloads\
+path=d:\09_hardRain\08_ihanseol - 2023\
 ViewMode=0
 activepanelcolor=-1
 activepanelcolor2=-1
 ShowAllDetails=1
 SpecialView=0
-show=1
+show=3
 sortorder=0
 negative Sortorder=0
 activepanelcolordark=-1
@@ -65,9 +65,8 @@ XPstyle=1
 3_options=1|0|0|0|0|1|0|
 4_path=d:\11_exaData\06_util\
 4_options=1|0|0|0|0|1|0|
-5_path=d:\05_Send\
-5_options=1|0|0|0|0|1|0|
-activetab=6
+activetab=5
+activelocked=1
 [righttabs]
 0_path=d:\11_exaData\06_util\
 0_options=1|0|0|0|0|1|0|
@@ -75,9 +74,5 @@ activetab=6
 1_options=1|0|0|0|0|1|0|
 2_path=d:\09_hardRain\07_ihanseol - 2022\
 2_options=1|0|0|0|0|1|0|
-3_path=d:\09_hardRain\08_ihanseol - 2023\
-3_options=1|0|0|0|0|1|0|
-4_path=d:\09_hardRain\08_ihanseol - 2023\00_data\a1_excel reference\05_Web Scraper\
-4_options=1|0|0|0|0|0|0|
-activetab=2
+activetab=3
 activelocked=1
