--- a/GHISLER/CONFIG/LeftRight.ini
+++ b/GHISLER/CONFIG/LeftRight.ini
@@ -1,7 +1,7 @@
 
 [left]
-path=d:\05_Send\
-ViewMode=0
+path=C:\Users\minhwasoo\AppData\Roaming\GHISLER\CONFIG\
+ViewMode=-1
 activepanelcolor=-1
 activepanelcolor2=-1
 ShowAllDetails=1
@@ -15,18 +15,18 @@ sortorder=0
 
 
 [right]
-path=d:\09_hardRain\08_ihanseol - 2023\
+path=d:\11_exaData\06_util\
 ViewMode=0
 activepanelcolor=-1
 activepanelcolor2=-1
 ShowAllDetails=1
 SpecialView=0
-show=3
+show=1
 sortorder=0
 negative Sortorder=0
 activepanelcolordark=-1
 activepanelcolordark2=-1
-userspec=*.*
+userspec=*.xml
 
 
 [Buttonbar]
@@ -65,14 +65,15 @@ XPstyle=1
 3_options=1|0|0|0|0|1|0|
 4_path=d:\11_exaData\06_util\
 4_options=1|0|0|0|0|1|0|
-activetab=5
-activelocked=1
+5_path=d:\05_Send\
+5_options=1|0|0|0|0|1|0|
+activetab=6
 [righttabs]
-0_path=d:\11_exaData\06_util\
+0_path=d:\12_dev\
 0_options=1|0|0|0|0|1|0|
-1_path=d:\12_dev\
+1_path=d:\09_hardRain\07_ihanseol - 2022\
 1_options=1|0|0|0|0|1|0|
-2_path=d:\09_hardRain\07_ihanseol - 2022\
+2_path=d:\09_hardRain\08_ihanseol - 2023\
 2_options=1|0|0|0|0|1|0|
-activetab=3
+activetab=0
 activelocked=1
