--- a/GHISLER/CONFIG/Selection.ini
+++ b/GHISLER/CONFIG/Selection.ini
@@ -1,21 +1,22 @@
 [Selection]
-0=*.*
-1=*.smi
-2=*.ttf
-3=*.txt
-4=*.otf
-5=*.png
-6=*.bar
-7=*.ico
-8=*.icl
-9=|*\
-10=|*
-11=*.mun
-12=*.dll
-13=*.exe
-14=jpg,jpeg
-15=*.icc
-16=*.ktw
-17=p*
-18=profile*
-19=setup*.dll
+0=*.xml
+1=*,xml
+2=*.*
+3=*.smi
+4=*.ttf
+5=*.txt
+6=*.otf
+7=*.png
+8=*.bar
+9=*.ico
+10=*.icl
+11=|*\
+12=|*
+13=*.mun
+14=*.dll
+15=*.exe
+16=jpg,jpeg
+17=*.icc
+18=*.ktw
+19=p*
+20=profile*
