--- a/GHISLER/CONFIG/Searches.ini
+++ b/GHISLER/CONFIG/Searches.ini
@@ -7,10 +7,7 @@ back,dwl,Back,log_SearchText=
 back,dwl,Back,log_SearchFlags=0|002002000020|||||||||0000|||
 back,dwl,Back,log_plugin=tc.fullname contains bak | tc.fullname contains Back | tc.fullname contains log | tc.fullname contains dwl
 
-exe_SearchFor=exe
-exe_SearchIn=
-exe_SearchText=
-exe_SearchFlags=0|002002000020|||||||||0000|||
+
 
 Find Empty Directory_SearchFor=
 Find Empty Directory_SearchIn=
@@ -18,53 +15,68 @@ Find Empty Directory_SearchText=
 Find Empty Directory_SearchFlags=0|002002000020|||||||||0000|||
 Find Empty Directory_plugin=dirsizecalc.Size.B = 0
 
+
 EmptyCheck_SearchFor=
 EmptyCheck_SearchIn=
 EmptyCheck_SearchText=
 EmptyCheck_SearchFlags=0|002002000020|||||||||0000|||
 EmptyCheck_plugin=emptycheck.Empty = 1
 
+;Mac Hidden Files
+4kb and hidden files_SearchFor=
+4kb and hidden files_SearchIn=
+4kb and hidden files_SearchText=
+4kb and hidden files_SearchFlags=0|002002000020|||||||||0000|||
+4kb and hidden files_plugin=tc.size.kbytes = 4 & tc.hidden = 1
 
+;.DS_Store, .- delete ...
+DS_Store_SearchFor=
+DS_Store_SearchIn=
+DS_Store_SearchText=
+DS_Store_SearchFlags=0|002002000020|||||||||0000|||
+DS_Store_plugin=tc.fullname contains DS_Store
 
 
 [SearchName]
-0=html
-1=exe
-2=.netrc
-3=power
-4=launcher
-5=filemenu
-6=?„ì˜¤??
-7=ipython
-8=.bashrc
-9=debug
-10=profile
-11=run_profile_d*.*
-12=run_profile_d
-13=flow
-14=?€??
-15=?€ë°?
-16=TCNewLib1
-17=ico
+0=DS_Store
+1=._
+2=html
+3=exe
+4=.netrc
+5=power
+6=launcher
+7=filemenu
+8=?„ì˜¤??
+9=ipython
+10=.bashrc
+11=debug
+12=profile
+13=run_profile_d*.*
+14=run_profile_d
+15=flow
+16=?€??
+17=?€ë°?
+18=TCNewLib1
+19=ico
 
 [SearchIn]
-0=d:\13_ÀüÁÖµµÀåÄÄ ÀÚ·á
-1=d:\13_ÀüÁÖµµÀåÄÄ ÀÚ·á\drive d\Temp
-2=d:\13_ÀüÁÖµµÀåÄÄ ÀÚ·á\drive d
-3=d:\12_dev
-4=d:\11_exaData\06_util
-5=z:\11_exaData\06_util
-6=z:\11_exaData\04_dev
-7=y:\A1_exaVideo
-8=d:\09_hardRain\08_ihanseol - 2023
-9=d:\02_Book
-10=z:\11_exaData\03_Design
-11=z:\11_exaData\05_OS
-12=z:\11_exaData\08_Microsoft Office
-13=z:\11_exaData\07_Font
-14=z:\09_hardRain\A1_jeong_cheon
-15=z:\09_hardRain\07_ihanseol - 2022
-16=z:\09_hardRain\06_ihanseol - 2021
-17=z:\09_hardRain\05_ihanseol - 2020
-18=z:\09_hardRain\04_ihanseol - 2019
-19=z:\09_hardRain\03_ihanseol - 2018
+0=d:\09_hardRain\08_ihanseol - 2023
+1=z:\11_exaData\06_util\010_ZZATURI\00_Internet
+2=z:\11_exaData\06_util
+3=d:\11_exaData\06_util
+4=d:\13_ÀüÁÖµµÀåÄÄ ÀÚ·á
+5=d:\13_ÀüÁÖµµÀåÄÄ ÀÚ·á\drive d\Temp
+6=d:\13_ÀüÁÖµµÀåÄÄ ÀÚ·á\drive d
+7=d:\12_dev
+8=z:\11_exaData\04_dev
+9=y:\A1_exaVideo
+10=d:\02_Book
+11=z:\11_exaData\03_Design
+12=z:\11_exaData\05_OS
+13=z:\11_exaData\08_Microsoft Office
+14=z:\11_exaData\07_Font
+15=z:\09_hardRain\A1_jeong_cheon
+16=z:\09_hardRain\07_ihanseol - 2022
+17=z:\09_hardRain\06_ihanseol - 2021
+18=z:\09_hardRain\05_ihanseol - 2020
+19=z:\09_hardRain\04_ihanseol - 2019
