--- a/GHISLER/CONFIG/Plugins.ini
+++ b/GHISLER/CONFIG/Plugins.ini
@@ -29,12 +29,12 @@ FSE=1
 0_detect=
 1_detect=
 2_detect=
-2_date=1160286627
+2_date=1160337827
 2_flags=0
+0_date=1192329840
+0_flags=14
 [ContentPlugins64]
-$checksum$=2258394382
+$checksum$=2179032252
 0=1
 1=1
 2=1
-
-
