--- a/GHISLER/CONFIG/LeftRight.ini
+++ b/GHISLER/CONFIG/LeftRight.ini
@@ -1,7 +1,7 @@
 
 [left]
-path=C:\Users\minhwasoo\AppData\Roaming\GHISLER\CONFIG\
-ViewMode=-1
+path=d:\05_Send\
+ViewMode=0
 activepanelcolor=-1
 activepanelcolor2=-1
 ShowAllDetails=1
@@ -15,7 +15,7 @@ sortorder=0
 
 
 [right]
-path=d:\11_exaData\06_util\
+path=d:\09_hardRain\08_ihanseol - 2023\
 ViewMode=0
 activepanelcolor=-1
 activepanelcolor2=-1
@@ -65,15 +65,16 @@ XPstyle=1
 3_options=1|0|0|0|0|1|0|
 4_path=d:\11_exaData\06_util\
 4_options=1|0|0|0|0|1|0|
-5_path=d:\05_Send\
-5_options=1|0|0|0|0|1|0|
-activetab=6
+activetab=5
+activelocked=1
 [righttabs]
-0_path=d:\12_dev\
+0_path=d:\11_exaData\06_util\
 0_options=1|0|0|0|0|1|0|
-1_path=d:\09_hardRain\07_ihanseol - 2022\
+1_path=d:\12_dev\
 1_options=1|0|0|0|0|1|0|
-2_path=d:\09_hardRain\08_ihanseol - 2023\
+2_path=c:\Users\minhwasoo\Downloads\
 2_options=1|0|0|0|0|1|0|
-activetab=0
+3_path=d:\09_hardRain\07_ihanseol - 2022\
+3_options=1|0|0|0|0|1|0|
+activetab=4
 activelocked=1
