--- a/GHISLER/CONFIG/Searches.ini
+++ b/GHISLER/CONFIG/Searches.ini
@@ -1,40 +1,42 @@
 [Searches]
-
-;<bak, Back, dwl>_SearchIn=
-back,dwl,Back,log_SearchFor=
-back,dwl,Back,log_SearchIn=
-back,dwl,Back,log_SearchText=
-back,dwl,Back,log_SearchFlags=0|002002000020|||||||||0000|||
-back,dwl,Back,log_plugin=tc.fullname contains bak | tc.fullname contains Back | tc.fullname contains log | tc.fullname contains dwl
-
-
-
-Find Empty Directory_SearchFor=
-Find Empty Directory_SearchIn=
-Find Empty Directory_SearchText=
-Find Empty Directory_SearchFlags=0|002002000020|||||||||0000|||
-Find Empty Directory_plugin=dirsizecalc.Size.B = 0
-
-
-EmptyCheck_SearchFor=
-EmptyCheck_SearchIn=
-EmptyCheck_SearchText=
-EmptyCheck_SearchFlags=0|002002000020|||||||||0000|||
-EmptyCheck_plugin=emptycheck.Empty = 1
-
 ;Mac Hidden Files
-4kb and hidden files_SearchFor=
-4kb and hidden files_SearchIn=
-4kb and hidden files_SearchText=
-4kb and hidden files_SearchFlags=0|002002000020|||||||||0000|||
-4kb and hidden files_plugin=tc.size.kbytes = 4 & tc.hidden = 1
+01_4kb and hidden files_SearchFor=
+01_4kb and hidden files_SearchIn=
+01_4kb and hidden files_SearchText=
+01_4kb and hidden files_SearchFlags=0|002002000020|||||||||0000|||
+01_4kb and hidden files_plugin=tc.size.bytes = 4096 & tc.hidden = 1
 
 ;.DS_Store, .- delete ...
-DS_Store_SearchFor=
-DS_Store_SearchIn=
-DS_Store_SearchText=
-DS_Store_SearchFlags=0|002002000020|||||||||0000|||
-DS_Store_plugin=tc.fullname contains DS_Store
+02_DS_Store_SearchFor=
+02_DS_Store_SearchIn=
+02_DS_Store_SearchText=
+02_DS_Store_SearchFlags=0|002002000020|||||||||0000|||
+02_DS_Store_plugin=tc.fullname contains DS_Store
+
+;<bak, Back, dwl>_SearchIn=
+03_back,dwl,Back,log_SearchFor=
+03_back,dwl,Back,log_SearchIn=
+03_back,dwl,Back,log_SearchText=
+03_back,dwl,Back,log_SearchFlags=0|002002000020|||||||||0000|||
+03_back,dwl,Back,log_plugin=tc.fullname contains bak | tc.fullname contains Back | tc.fullname contains log | tc.fullname contains dwl
+
+04_EmptyCheck_SearchFor=
+04_EmptyCheck_SearchIn=
+04_EmptyCheck_SearchText=
+04_EmptyCheck_SearchFlags=0|002002000020|||||||||0000|||
+04_EmptyCheck_plugin=emptycheck.Empty = 1
+
+05_Find Empty Directory_SearchFor=
+05_Find Empty Directory_SearchIn=
+05_Find Empty Directory_SearchText=
+05_Find Empty Directory_SearchFlags=0|002002000020|||||||||0000|||
+05_Find Empty Directory_plugin=dirsizecalc.Size.B = 0
+
+06_Thumbs.db_SearchFor=
+06_Thumbs.db_SearchIn=
+06_Thumbs.db_SearchText=
+06_Thumbs.db_SearchFlags=0|002002000020|||||||||0000|||
+06_Thumbs.db_plugin=tc.fullname contains Thumbs.db 
 
 
 [SearchName]
@@ -60,23 +62,23 @@ DS_Store_plugin=tc.fullname contains DS_Store
 19=ico
 
 [SearchIn]
-0=d:\09_hardRain\08_ihanseol - 2023
-1=z:\11_exaData\06_util\010_ZZATURI\00_Internet
-2=z:\11_exaData\06_util
-3=d:\11_exaData\06_util
-4=d:\13_전주도장컴 자료
-5=d:\13_전주도장컴 자료\drive d\Temp
-6=d:\13_전주도장컴 자료\drive d
-7=d:\12_dev
-8=z:\11_exaData\04_dev
-9=y:\A1_exaVideo
-10=d:\02_Book
-11=z:\11_exaData\03_Design
-12=z:\11_exaData\05_OS
-13=z:\11_exaData\08_Microsoft Office
-14=z:\11_exaData\07_Font
-15=z:\09_hardRain\A1_jeong_cheon
-16=z:\09_hardRain\07_ihanseol - 2022
-17=z:\09_hardRain\06_ihanseol - 2021
-18=z:\09_hardRain\05_ihanseol - 2020
-19=z:\09_hardRain\04_ihanseol - 2019
+0=z:\11_exaData
+1=d:\11_exaData\06_util
+2=F:\11_exaData\06_util
+3=f:\
+4=f:\11_exaData\06_util
+5=d:\09_hardRain\08_ihanseol - 2023
+6=z:\11_exaData\06_util\010_ZZATURI\00_Internet
+7=z:\11_exaData\06_util
+8=d:\13_전주도장컴 자료
+9=d:\13_전주도장컴 자료\drive d\Temp
+10=d:\13_전주도장컴 자료\drive d
+11=d:\12_dev
+12=z:\11_exaData\04_dev
+13=y:\A1_exaVideo
+14=d:\02_Book
+15=z:\11_exaData\03_Design
+16=z:\11_exaData\05_OS
+17=z:\11_exaData\08_Microsoft Office
+18=z:\11_exaData\07_Font
+19=z:\09_hardRain\A1_jeong_cheon
