--- a/GHISLER/CONFIG/LeftRight.ini
+++ b/GHISLER/CONFIG/LeftRight.ini
@@ -21,12 +21,12 @@ activepanelcolor=-1
 activepanelcolor2=-1
 ShowAllDetails=1
 SpecialView=0
-show=1
+show=3
 sortorder=0
 negative Sortorder=0
 activepanelcolordark=-1
 activepanelcolordark2=-1
-userspec=*.xml
+userspec=*.*
 
 
 [Buttonbar]
