--- a/GHISLER/CONFIG/Searches.ini
+++ b/GHISLER/CONFIG/Searches.ini
@@ -40,45 +40,45 @@
 
 
 [SearchName]
-0=DS_Store
-1=._
-2=html
-3=exe
-4=.netrc
-5=power
-6=launcher
-7=filemenu
-8=?„ì˜¤??
-9=ipython
-10=.bashrc
-11=debug
-12=profile
-13=run_profile_d*.*
-14=run_profile_d
-15=flow
-16=?€??
-17=?€ë°?
-18=TCNewLib1
-19=ico
+0=ddu
+1=DS_Store
+2=._
+3=html
+4=exe
+5=.netrc
+6=power
+7=launcher
+8=filemenu
+9=?„ì˜¤??
+10=ipython
+11=.bashrc
+12=debug
+13=profile
+14=run_profile_d*.*
+15=run_profile_d
+16=flow
+17=?€??
+18=?€ë°?
+19=TCNewLib1
 
 [SearchIn]
-0=z:\11_exaData
-1=d:\11_exaData\06_util
-2=F:\11_exaData\06_util
-3=f:\
-4=f:\11_exaData\06_util
-5=d:\09_hardRain\08_ihanseol - 2023
-6=z:\11_exaData\06_util\010_ZZATURI\00_Internet
-7=z:\11_exaData\06_util
-8=d:\13_ÀüÁÖµµÀåÄÄ ÀÚ·á
-9=d:\13_ÀüÁÖµµÀåÄÄ ÀÚ·á\drive d\Temp
-10=d:\13_ÀüÁÖµµÀåÄÄ ÀÚ·á\drive d
-11=d:\12_dev
-12=z:\11_exaData\04_dev
-13=y:\A1_exaVideo
-14=d:\02_Book
-15=z:\11_exaData\03_Design
-16=z:\11_exaData\05_OS
-17=z:\11_exaData\08_Microsoft Office
-18=z:\11_exaData\07_Font
-19=z:\09_hardRain\A1_jeong_cheon
+0=d:\11_exaData\06_util
+1=d:\11_exaData\06_util\010_ZZATURI
+2=z:\11_exaData
+3=F:\11_exaData\06_util
+4=f:\
+5=f:\11_exaData\06_util
+6=d:\09_hardRain\08_ihanseol - 2023
+7=z:\11_exaData\06_util\010_ZZATURI\00_Internet
+8=z:\11_exaData\06_util
+9=d:\13_ÀüÁÖµµÀåÄÄ ÀÚ·á
+10=d:\13_ÀüÁÖµµÀåÄÄ ÀÚ·á\drive d\Temp
+11=d:\13_ÀüÁÖµµÀåÄÄ ÀÚ·á\drive d
+12=d:\12_dev
+13=z:\11_exaData\04_dev
+14=y:\A1_exaVideo
+15=d:\02_Book
+16=z:\11_exaData\03_Design
+17=z:\11_exaData\05_OS
+18=z:\11_exaData\08_Microsoft Office
+19=z:\11_exaData\07_Font
