--- a/GHISLER/usercmd.ini
+++ b/GHISLER/usercmd.ini
@@ -130,3 +130,41 @@ param=""%P\%N""
 
 button=C:\Program Files\totalcmd\ini\icons dll\convert.icl,6
 menu=Convert cp949 ansi file to Utf-8 Bom
+
+
+[em_Hibernate]
+cmd=NirCMD qboxcomtop "Is it certain?" "dormancy" hibernate
+menu=Hibernate
+path=%commander_path%\tools
+
+[em_LogOff]
+cmd=NirCMD qboxcomtop "Are you sure?" "log out the current user" exitwin logoff
+menu=Log off
+path=%commander_path%\tools
+
+[em_MonitorOff]
+cmd=NirCMD monitor off
+menu=turn off the display
+path=%commander_path%\tools
+
+[em_MuteVolume]
+cmd=NirCMD mutesysvolume 2
+menu=Mute On/Off
+path=%commander_path%\tools
+
+
+[em_PowerOff]
+cmd=NirCMD qboxcomtop "Are you sure?" "Shut down the computer" exitwin poweroff
+menu=PowerOff
+path=%commander_path%\tools
+
+[em_Restart]
+cmd=NirCMD qboxcomtop "Are you sure?" "restart the computer" exitwin reboot
+menu=restart
+path=%commander_path%\tools
+
+
+[em_Standby]
+cmd=NirCMD qboxcomtop "Is it certain?" "waiting table" standby
+menu=Standby
+path=%commander_path%\tools
