--- a/GHISLER/CONFIG/LeftRight.ini
+++ b/GHISLER/CONFIG/LeftRight.ini
@@ -1,12 +1,12 @@
 
 [left]
-path=d:\05_Send\
-ViewMode=0
+path=d:\
+ViewMode=-1
 activepanelcolor=-1
 activepanelcolor2=-1
 ShowAllDetails=1
 SpecialView=0
-show=1
+show=3
 negative Sortorder=0
 activepanelcolordark=-1
 activepanelcolordark2=-1
@@ -21,7 +21,7 @@ activepanelcolor=-1
 activepanelcolor2=-1
 ShowAllDetails=1
 SpecialView=0
-show=3
+show=1
 sortorder=0
 negative Sortorder=0
 activepanelcolordark=-1
@@ -65,8 +65,11 @@ XPstyle=1
 3_options=1|0|0|0|0|1|0|
 4_path=d:\11_exaData\06_util\
 4_options=1|0|0|0|0|1|0|
-activetab=5
-activelocked=1
+5_path=d:\05_Send\
+5_options=1|0|0|0|0|1|0|
+6_path=c:\Users\minhwasoo\Downloads\
+6_options=1|0|0|0|0|0|0|
+activetab=7
 [righttabs]
 0_path=d:\11_exaData\06_util\
 0_options=1|0|0|0|0|1|0|
@@ -74,7 +77,5 @@ activelocked=1
 1_options=1|0|0|0|0|1|0|
 2_path=c:\Users\minhwasoo\Downloads\
 2_options=1|0|0|0|0|1|0|
-3_path=d:\09_hardRain\07_ihanseol - 2022\
-3_options=1|0|0|0|0|1|0|
-activetab=4
+activetab=3
 activelocked=1
