--- a/GHISLER/CONFIG/Rename.ini
+++ b/GHISLER/CONFIG/Rename.ini
@@ -18,39 +18,49 @@ Number Non Zero_params=0|1|1|1
 
 
 [RenameTemplates]
-0=0[C]_[N]
-1=0[N]
-2=P[C]_[N]
-3=00_[N]
-4=[C]
-5=[c]
-6=folder[C]
-7=firewall-[C]
-8=00_wdf_[N]
-9=[N]
+0=신비한 바다의 나디아, 오마케 - [C:5]
+1=신비한 바다의 나디아, 스페셜 - [C:5]
+2=신비한 바다의 나디아 - [C:5]
+3=미래소년 코난 - [C:5]
+4=사이버 포뮬러 TV 5기 - [C:5]
+5=사이버 포뮬러 TV 4기 - [C:5]
+6=사이버 포뮬러 TV 3기 - [C:5]
+7=사이버 포뮬러 TV 2기 - [C:5]
+8=사이버 포뮬러 TV 1기 - [C:5]
+9=00_[N]
+10=쓸쓸하고 찬란한 신 , 도깨비 - [C:4]
+11=허구추리 - [C:4]
+12=창궁의 파프너 - [C:4]
+13=전투요정 유키카제 - [C:4]
+14=이세계 약국 - [C:4]
+15=이과가 사랑에 빠졌기에 증명해 보았다 2기 - [C:4]
+16=이과가 사랑에 빠졌기에 증명해 보았다 1기 - [C:4]
+17=어떤 과학의 초전자포 3기 - [C:4]
+18=스파이 패밀리 2기 - [C:4]
+19=스파이 패밀리 1기 - [C:4]
 
 
 [RenameSearchFind]
-0=mun
-1=bat
-2=" (2)"
-3=占쏙옙
-4=[VON]
-5=w
-6=A
-7=w1
-8=w4
-9=w3
-10=w2
-11=W1
-12=W4
-13=W3
-14=W2
-15="[Shiniori-Raws] "
-16=0w
-17=o
-18=ass
-19=a
+0="[Shiniori-Raws] "
+1=^.{7}
+2=mun
+3=bat
+4=" (2)"
+5=占쏙옙
+6=[VON]
+7=w
+8=A
+9=w1
+10=w4
+11=w3
+12=w2
+13=W1
+14=W4
+15=W3
+16=W2
+17=0w
+18=o
+19=ass
 
 
 [RenameSearchReplace]
