--- a/GHISLER/CONFIG/Searches.ini
+++ b/GHISLER/CONFIG/Searches.ini
@@ -40,45 +40,45 @@
 
 
 [SearchName]
-0=ddu
-1=DS_Store
-2=._
-3=html
-4=exe
-5=.netrc
-6=power
-7=launcher
-8=filemenu
-9=?„ì˜¤??
-10=ipython
-11=.bashrc
-12=debug
-13=profile
-14=run_profile_d*.*
-15=run_profile_d
-16=flow
-17=?€??
-18=?€ë°?
-19=TCNewLib1
+0=RegistryWorkShop
+1=regis
+2=ddu
+3=DS_Store
+4=._
+5=html
+6=exe
+7=.netrc
+8=power
+9=launcher
+10=filemenu
+11=?„ì˜¤??
+12=ipython
+13=.bashrc
+14=debug
+15=profile
+16=run_profile_d*.*
+17=run_profile_d
+18=flow
+19=?€??
 
 [SearchIn]
-0=d:\11_exaData\06_util
-1=d:\11_exaData\06_util\010_ZZATURI
-2=z:\11_exaData
-3=F:\11_exaData\06_util
-4=f:\
-5=f:\11_exaData\06_util
-6=d:\09_hardRain\08_ihanseol - 2023
-7=z:\11_exaData\06_util\010_ZZATURI\00_Internet
-8=z:\11_exaData\06_util
-9=d:\13_ÀüÁÖµµÀåÄÄ ÀÚ·á
-10=d:\13_ÀüÁÖµµÀåÄÄ ÀÚ·á\drive d\Temp
-11=d:\13_ÀüÁÖµµÀåÄÄ ÀÚ·á\drive d
-12=d:\12_dev
-13=z:\11_exaData\04_dev
-14=y:\A1_exaVideo
-15=d:\02_Book
-16=z:\11_exaData\03_Design
-17=z:\11_exaData\05_OS
-18=z:\11_exaData\08_Microsoft Office
-19=z:\11_exaData\07_Font
+0=C:\Program Files\totalcmd
+1=d:\11_exaData\06_util
+2=d:\11_exaData\06_util\010_ZZATURI
+3=z:\11_exaData
+4=F:\11_exaData\06_util
+5=f:\
+6=f:\11_exaData\06_util
+7=d:\09_hardRain\08_ihanseol - 2023
+8=z:\11_exaData\06_util\010_ZZATURI\00_Internet
+9=z:\11_exaData\06_util
+10=d:\13_ÀüÁÖµµÀåÄÄ ÀÚ·á
+11=d:\13_ÀüÁÖµµÀåÄÄ ÀÚ·á\drive d\Temp
+12=d:\13_ÀüÁÖµµÀåÄÄ ÀÚ·á\drive d
+13=d:\12_dev
+14=z:\11_exaData\04_dev
+15=y:\A1_exaVideo
+16=d:\02_Book
+17=z:\11_exaData\03_Design
+18=z:\11_exaData\05_OS
+19=z:\11_exaData\08_Microsoft Office
