--- a/GHISLER/CONFIG/Selection.ini
+++ b/GHISLER/CONFIG/Selection.ini
@@ -1,21 +1,21 @@
 [Selection]
-0=*.*
-1=*.xml
-2=*,xml
-3=*.smi
-4=*.ttf
-5=*.txt
-6=*.otf
-7=*.png
-8=*.bar
-9=*.ico
-10=*.icl
-11=|*\
-12=|*
-13=*.mun
-14=*.dll
-15=*.exe
-16=jpg,jpeg
-17=*.icc
-18=*.ktw
-19=p*
+0=*.flac
+1=*.wav
+2=*.*
+3=*.jpg
+4=*.mp3
+5=*.xml
+6=*,xml
+7=*.smi
+8=*.ttf
+9=*.txt
+10=*.otf
+11=*.png
+12=*.bar
+13=*.ico
+14=*.icl
+15=|*\
+16=|*
+17=*.mun
+18=*.dll
+19=*.exe
