--- a/GHISLER/usercmd.ini
+++ b/GHISLER/usercmd.ini
@@ -114,7 +114,8 @@ button=C:\Program Files\totalcmd\ini\icons dll\oxy-gnome4TCv2.icl,34
 button=C:\Program Files (x86)\VirusTotalUploader2\VirusTotalUploader2.2.exe
 cmd=C:\Program Files (x86)\VirusTotalUploader2\VirusTotalUploader2.2.exe
 menu=VirusTotal Check
-param=""%P\%N""
+param=%n
+; param=""%P\%N""
 
 
 [em_UnpackFiles]
@@ -130,6 +131,13 @@ param=""%P\%N""
 
 button=C:\Program Files\totalcmd\ini\icons dll\convert.icl,6
 menu=Convert cp949 ansi file to Utf-8 Bom
+
+
+[em_PythonStartNumber]
+cmd=python "c:\Program Files\totalcmd\ini\config\startnumber_change.py"
+button=C:\Program Files\totalcmd\ini\icons dll\minhwasoo.icl,87
+menu=Change File Name with SartNumber
+
 
 
 [em_Hibernate]
