--- a/GHISLER/CONFIG/DirMenu.ini
+++ b/GHISLER/CONFIG/DirMenu.ini
@@ -64,102 +64,104 @@ menu34=11_exaData
 cmd34=cd d:\11_exaData
 menu35=05_WSH
 cmd35=cd d:\11_exaData\05_OS\05_WSH
-menu36=06_Utility
-cmd36=cd d:\11_exaData\06_util
-menu37=016_Dev Tool
-cmd37=cd d:\11_exaData\06_util\016_dev tool
-menu38=010_ZZATURI
-cmd38=cd d:\11_exaData\06_util\010_ZZATURI
-menu39=01_Test Program
-cmd39=cd d:\11_exaData\06_util\010_ZZATURI\01_Test Program
-menu40=12_BAT_FFMPEG
-cmd40=cd d:\11_exaData\06_util\020_VideoEditing\12_BAT_FFMPEG
-menu41=10_cmder
-cmd41=cd d:\11_exaData\06_util\099_Game\10_cmder
-menu42=099_Game
-cmd42=cd d:\11_exaData\06_util\099_Game
-menu43=--
-menu44="-hardrain , Ground Water Report "
-menu45=04_Reference Data
-cmd45=cd d:\09_hardRain\08_ihanseol - 2023\00_data\04_Reference Data
-menu46=11_JungCheon Photo by Season
-cmd46=cd d:\09_hardRain\A1_jeong_cheon\11_JungCheon Photo by Season
-menu47=07_LandSlide
-cmd47=cd d:\12_dev\02_Excel\07_LandSlide
-menu48=05_ihanseol - 2020
-cmd48=cd d:\09_hardRain\05_ihanseol - 2020
-menu49=06_ihanseol - 2021
-cmd49=cd d:\09_hardRain\06_ihanseol - 2021
-menu50=07_ihanseol - 2022
-cmd50=cd d:\09_hardRain\07_ihanseol - 2022
-menu51=08_ihanseol - 2023
-cmd51=cd d:\09_hardRain\08_ihanseol - 2023
-menu52=--
-menu53=-WSL2
-menu54=WSL LocalState EXT4
-cmd54=cd C:\Users\minhwasoo\AppData\Local\Packages\CanonicalGroupLimited.Ubuntu_79rhkp1fndgsc\LocalState
-menu55=WSL minhwasoo
-cmd55=cd a:\home\minhwasoo
-menu56=--
-menu57=-Git Bash
-menu58=Git
-cmd58=cd C:\Program Files\Git
-menu59=gitbash /usr/bin
-cmd59=cd C:\Program Files\Git\usr\bin
-menu60=gitbash - mingw64 - bin
-cmd60=cd C:\Program Files\Git\mingw64\bin
-menu61=gitbvash - mingw64 - git-core
-cmd61=cd C:\Program Files\Git\mingw64\libexec\git-core
-menu62=gitbash - mergetools
-cmd62=cd C:\Program Files\Git\mingw64\libexec\git-core\mergetools
-menu63=--
-menu64=-Appdata and Local
-menu65=d:/12_dev/  Action and Configuration
-cmd65=cd d:\12_dev\01_Linux\08_wincmd.ini\Action and Configuration
-menu66=Sublime Installed Packages
-cmd66=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Installed Packages
-menu67=Sublime Packages
-cmd67=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages
-menu68=Sublime Packages User
-cmd68=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages\User
-menu69=FlowLauncher CustomIcons
-cmd69=cd C:\Users\minhwasoo\AppData\Roaming\FlowLauncher\Settings\Plugins\Flow.Launcher.Plugin.WebSearch\CustomIcons
-menu70=Bing WPImages
-cmd70=cd C:\Users\minhwasoo\AppData\Local\Microsoft\BingWallpaperApp\WPImages
-menu71=AppData Local
-cmd71=cd C:\Users\minhwasoo\AppData\Local
-menu72=AddData Roaming
-cmd72=cd C:\Users\minhwasoo\AppData\Roaming
-menu73=WindowsTerminal Setting
-cmd73=cd C:\Users\minhwasoo\AppData\Local\Packages\Microsoft.WindowsTerminal_8wekyb3d8bbwe\LocalState
-menu74=ProgramData
-cmd74=cd C:\ProgramData
-menu75=--
-menu76=00_Emule
-cmd76=cd C:\ProgramData\00_Emule
-menu77=02_ROMS
-cmd77=cd d:\11_exaData\10_Game\02_ROMS
-menu78=03_download
-cmd78=cd d:\03_download
-menu79=03_my_script
-cmd79=cd d:\12_dev\03_visual_lisp\03_my_script
-menu80=02_Book
-cmd80=cd d:\02_Book
-menu81=08_나의작업
-cmd81=cd d:\08_나의작업\
-menu82=04_mp3
-cmd82=cd d:\04_mp3
-menu83=05_Send
-cmd83=cd d:\05_Send
-menu84=06_Send2
-cmd84=cd d:\06_Send2
-menu85=12_dev
-cmd85=cd d:\12_dev
-menu86=C:_Temp
-cmd86=cd c:\Temp
-menu87=e: download
-cmd87=cd e:\download
-menu88=Bing
-cmd88=cd d:\10_photo\Desktop Pictures\bing
-menu89=NAS4DUAL 06_util
-cmd89=cd z:\11_exaData\06_util
+menu36=05_OS
+cmd36=cd d:\11_exaData\05_OS
+menu37=06_Utility
+cmd37=cd d:\11_exaData\06_util
+menu38=016_Dev Tool
+cmd38=cd d:\11_exaData\06_util\016_dev tool
+menu39=010_ZZATURI
+cmd39=cd d:\11_exaData\06_util\010_ZZATURI
+menu40=01_Test Program
+cmd40=cd d:\11_exaData\06_util\010_ZZATURI\01_Test Program
+menu41=12_BAT_FFMPEG
+cmd41=cd d:\11_exaData\06_util\020_VideoEditing\12_BAT_FFMPEG
+menu42=10_cmder
+cmd42=cd d:\11_exaData\06_util\099_Game\10_cmder
+menu43=099_Game
+cmd43=cd d:\11_exaData\06_util\099_Game
+menu44=--
+menu45="-hardrain , Ground Water Report "
+menu46=04_Reference Data
+cmd46=cd d:\09_hardRain\08_ihanseol - 2023\00_data\04_Reference Data
+menu47=11_JungCheon Photo by Season
+cmd47=cd d:\09_hardRain\A1_jeong_cheon\11_JungCheon Photo by Season
+menu48=07_LandSlide
+cmd48=cd d:\12_dev\02_Excel\07_LandSlide
+menu49=05_ihanseol - 2020
+cmd49=cd d:\09_hardRain\05_ihanseol - 2020
+menu50=06_ihanseol - 2021
+cmd50=cd d:\09_hardRain\06_ihanseol - 2021
+menu51=07_ihanseol - 2022
+cmd51=cd d:\09_hardRain\07_ihanseol - 2022
+menu52=08_ihanseol - 2023
+cmd52=cd d:\09_hardRain\08_ihanseol - 2023
+menu53=--
+menu54=-WSL2
+menu55=WSL LocalState EXT4
+cmd55=cd C:\Users\minhwasoo\AppData\Local\Packages\CanonicalGroupLimited.Ubuntu_79rhkp1fndgsc\LocalState
+menu56=WSL minhwasoo
+cmd56=cd a:\home\minhwasoo
+menu57=--
+menu58=-Git Bash
+menu59=Git
+cmd59=cd C:\Program Files\Git
+menu60=gitbash /usr/bin
+cmd60=cd C:\Program Files\Git\usr\bin
+menu61=gitbash - mingw64 - bin
+cmd61=cd C:\Program Files\Git\mingw64\bin
+menu62=gitbvash - mingw64 - git-core
+cmd62=cd C:\Program Files\Git\mingw64\libexec\git-core
+menu63=gitbash - mergetools
+cmd63=cd C:\Program Files\Git\mingw64\libexec\git-core\mergetools
+menu64=--
+menu65=-Appdata and Local
+menu66=d:/12_dev/  Action and Configuration
+cmd66=cd d:\12_dev\01_Linux\08_wincmd.ini\Action and Configuration
+menu67=Sublime Installed Packages
+cmd67=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Installed Packages
+menu68=Sublime Packages
+cmd68=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages
+menu69=Sublime Packages User
+cmd69=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages\User
+menu70=FlowLauncher CustomIcons
+cmd70=cd C:\Users\minhwasoo\AppData\Roaming\FlowLauncher\Settings\Plugins\Flow.Launcher.Plugin.WebSearch\CustomIcons
+menu71=Bing WPImages
+cmd71=cd C:\Users\minhwasoo\AppData\Local\Microsoft\BingWallpaperApp\WPImages
+menu72=AppData Local
+cmd72=cd C:\Users\minhwasoo\AppData\Local
+menu73=AddData Roaming
+cmd73=cd C:\Users\minhwasoo\AppData\Roaming
+menu74=WindowsTerminal Setting
+cmd74=cd C:\Users\minhwasoo\AppData\Local\Packages\Microsoft.WindowsTerminal_8wekyb3d8bbwe\LocalState
+menu75=ProgramData
+cmd75=cd C:\ProgramData
+menu76=--
+menu77=00_Emule
+cmd77=cd C:\ProgramData\00_Emule
+menu78=02_ROMS
+cmd78=cd d:\11_exaData\10_Game\02_ROMS
+menu79=03_download
+cmd79=cd d:\03_download
+menu80=03_my_script
+cmd80=cd d:\12_dev\03_visual_lisp\03_my_script
+menu81=02_Book
+cmd81=cd d:\02_Book
+menu82=08_나의작업
+cmd82=cd d:\08_나의작업\
+menu83=04_mp3
+cmd83=cd d:\04_mp3
+menu84=05_Send
+cmd84=cd d:\05_Send
+menu85=06_Send2
+cmd85=cd d:\06_Send2
+menu86=12_dev
+cmd86=cd d:\12_dev
+menu87=C:_Temp
+cmd87=cd c:\Temp
+menu88=e: download
+cmd88=cd e:\download
+menu89=Bing
+cmd89=cd d:\10_photo\Desktop Pictures\bing
+menu90=NAS4DUAL 06_util
+cmd90=cd z:\11_exaData\06_util
