--- a/GHISLER/CONFIG/LeftRight.ini
+++ b/GHISLER/CONFIG/LeftRight.ini
@@ -1,12 +1,12 @@
 
 [left]
-path=d:\
-ViewMode=-1
+path=c:\Users\minhwasoo\Downloads\
+ViewMode=0
 activepanelcolor=-1
 activepanelcolor2=-1
 ShowAllDetails=1
 SpecialView=0
-show=3
+show=1
 negative Sortorder=0
 activepanelcolordark=-1
 activepanelcolordark2=-1
@@ -21,7 +21,7 @@ activepanelcolor=-1
 activepanelcolor2=-1
 ShowAllDetails=1
 SpecialView=0
-show=1
+show=3
 sortorder=0
 negative Sortorder=0
 activepanelcolordark=-1
@@ -57,19 +57,16 @@ XPstyle=1
 [lefttabs]
 0_path=c:\Users\minhwasoo\Desktop\
 0_options=1|0|0|0|0|1|0|
-1_path=c:\Users\minhwasoo\Documents\
+1_path=c:\Users\minhwasoo\Pictures\
 1_options=1|0|0|0|0|1|0|
-2_path=c:\Users\minhwasoo\Pictures\
+2_path=c:\Users\minhwasoo\Documents\
 2_options=1|0|0|0|0|1|0|
-3_path=c:\Users\minhwasoo\Downloads\
+3_path=d:\11_exaData\06_util\
 3_options=1|0|0|0|0|1|0|
-4_path=d:\11_exaData\06_util\
+4_path=d:\05_Send\
 4_options=1|0|0|0|0|1|0|
-5_path=d:\05_Send\
-5_options=1|0|0|0|0|1|0|
-6_path=c:\Users\minhwasoo\Downloads\
-6_options=1|0|0|0|0|0|0|
-activetab=7
+activetab=3
+activelocked=1
 [righttabs]
 0_path=d:\11_exaData\06_util\
 0_options=1|0|0|0|0|1|0|
