--- a/GHISLER/CONFIG/Configuration.ini
+++ b/GHISLER/CONFIG/Configuration.ini
@@ -112,3 +112,4 @@ CustomDateFormat=2
 IgnoreListFileEnabled=0
 IgnoreListFile=C:\Users\minhwasoo\AppData\Roaming\GHISLER\tcignore.txt
 ShowCopyOptions=1
+ThumbsInDlg=1
