--- a/GHISLER/CONFIG/history.ini
+++ b/GHISLER/CONFIG/history.ini
@@ -1,26 +1,26 @@
 
 [MkDirHistory]
-0=09_System Info
-1=23_mRemoteNG
-2=09_hardRain
-3=11_Double Commander
-4=13_ExaVideo
-5=18_Kodi
-6=13_ExaVide
-7=Docu
-8=TV
-9=02_DSM6.2.4-2556
-10=04_DSM 7.0.1-4228-6
-11=1
-12=04_Multi Rename Tool
-13=Movie
-14=Animation Theater
-15=Animation Series
-16=12_ExaVideo
-17=ooregeditor
-18=09_Redistry
-19=.scooped_dir
-20=06_BackUp
+0=01_change filename
+1=02_python
+2=01_LazaRus
+3=09_System Info
+4=23_mRemoteNG
+5=09_hardRain
+6=11_Double Commander
+7=13_ExaVideo
+8=18_Kodi
+9=13_ExaVide
+10=Docu
+11=TV
+12=02_DSM6.2.4-2556
+13=04_DSM 7.0.1-4228-6
+14=1
+15=04_Multi Rename Tool
+16=Movie
+17=Animation Theater
+18=Animation Series
+19=12_ExaVideo
+20=ooregeditor
 
 
 
