--- a/GHISLER/CONFIG/LeftRight.ini
+++ b/GHISLER/CONFIG/LeftRight.ini
@@ -1,6 +1,6 @@
 
 [left]
-path=c:\Users\minhwasoo\Downloads\
+path=d:\05_Send\
 ViewMode=0
 activepanelcolor=-1
 activepanelcolor2=-1
@@ -61,11 +61,11 @@ XPstyle=1
 1_options=1|0|0|0|0|1|0|
 2_path=c:\Users\minhwasoo\Documents\
 2_options=1|0|0|0|0|1|0|
-3_path=d:\11_exaData\06_util\
+3_path=c:\Users\minhwasoo\Downloads\
 3_options=1|0|0|0|0|1|0|
-4_path=d:\05_Send\
+4_path=d:\11_exaData\06_util\
 4_options=1|0|0|0|0|1|0|
-activetab=3
+activetab=5
 activelocked=1
 [righttabs]
 0_path=d:\11_exaData\06_util\
