--- a/GHISLER/CONFIG/Searches.ini
+++ b/GHISLER/CONFIG/Searches.ini
@@ -18,7 +18,7 @@
 03_back,dwl,Back,log_SearchIn=
 03_back,dwl,Back,log_SearchText=
 03_back,dwl,Back,log_SearchFlags=0|002002000020|||||||||0000|||
-03_back,dwl,Back,log_plugin=tc.fullname contains bak | tc.fullname contains Back | tc.fullname contains log | tc.fullname contains dwl
+03_back,dwl,Back,log_plugin=tc.ext contains bak | tc.fullname contains Back | tc.ext contains log | tc.ext contains dwl
 
 04_EmptyCheck_SearchFor=
 04_EmptyCheck_SearchIn=
@@ -40,36 +40,36 @@
 
 
 [SearchName]
-0=RegistryWorkShop
-1=regis
-2=ddu
-3=DS_Store
-4=._
-5=html
-6=exe
-7=.netrc
-8=power
-9=launcher
-10=filemenu
-11=?„ì˜¤??
-12=ipython
-13=.bashrc
-14=debug
-15=profile
-16=run_profile_d*.*
-17=run_profile_d
-18=flow
-19=?€??
+0=typora
+1=RegistryWorkShop
+2=regis
+3=ddu
+4=DS_Store
+5=._
+6=html
+7=exe
+8=.netrc
+9=power
+10=launcher
+11=filemenu
+12=?„ì˜¤??
+13=ipython
+14=.bashrc
+15=debug
+16=profile
+17=run_profile_d*.*
+18=run_profile_d
+19=flow
 
 [SearchIn]
-0=C:\Program Files\totalcmd
+0=d:\09_hardRain\08_ihanseol - 2023
 1=d:\11_exaData\06_util
-2=d:\11_exaData\06_util\010_ZZATURI
-3=z:\11_exaData
-4=F:\11_exaData\06_util
-5=f:\
-6=f:\11_exaData\06_util
-7=d:\09_hardRain\08_ihanseol - 2023
+2=C:\Program Files\totalcmd
+3=d:\11_exaData\06_util\010_ZZATURI
+4=z:\11_exaData
+5=F:\11_exaData\06_util
+6=f:\
+7=f:\11_exaData\06_util
 8=z:\11_exaData\06_util\010_ZZATURI\00_Internet
 9=z:\11_exaData\06_util
 10=d:\13_ÀüÁÖµµÀåÄÄ ÀÚ·á
