--- a/GHISLER/CONFIG/Rename.ini
+++ b/GHISLER/CONFIG/Rename.ini
@@ -18,49 +18,49 @@ Number Non Zero_params=0|1|1|1
 
 
 [RenameTemplates]
-0=신비한 바다의 나디아, 오마케 - [C:5]
-1=신비한 바다의 나디아, 스페셜 - [C:5]
-2=신비한 바다의 나디아 - [C:5]
-3=미래소년 코난 - [C:5]
-4=사이버 포뮬러 TV 5기 - [C:5]
-5=사이버 포뮬러 TV 4기 - [C:5]
-6=사이버 포뮬러 TV 3기 - [C:5]
-7=사이버 포뮬러 TV 2기 - [C:5]
-8=사이버 포뮬러 TV 1기 - [C:5]
-9=00_[N]
-10=쓸쓸하고 찬란한 신 , 도깨비 - [C:4]
-11=허구추리 - [C:4]
-12=창궁의 파프너 - [C:4]
-13=전투요정 유키카제 - [C:4]
-14=이세계 약국 - [C:4]
-15=이과가 사랑에 빠졌기에 증명해 보았다 2기 - [C:4]
-16=이과가 사랑에 빠졌기에 증명해 보았다 1기 - [C:4]
-17=어떤 과학의 초전자포 3기 - [C:4]
-18=스파이 패밀리 2기 - [C:4]
-19=스파이 패밀리 1기 - [C:4]
+0=00_[N]
+1=0[C]_[N]
+2=[N]
+3=Suzumiya Haruhi no Yuuutsu - [C:5]
+4=Ref - [N]
+5=[N][P1-6][hms]
+6=신비한 바다의 나디아, 오마케 - [C:5]
+7=신비한 바다의 나디아, 스페셜 - [C:5]
+8=신비한 바다의 나디아 - [C:5]
+9=미래소년 코난 - [C:5]
+10=사이버 포뮬러 TV 5기 - [C:5]
+11=사이버 포뮬러 TV 4기 - [C:5]
+12=사이버 포뮬러 TV 3기 - [C:5]
+13=사이버 포뮬러 TV 2기 - [C:5]
+14=사이버 포뮬러 TV 1기 - [C:5]
+15=쓸쓸하고 찬란한 신 , 도깨비 - [C:4]
+16=허구추리 - [C:4]
+17=창궁의 파프너 - [C:4]
+18=전투요정 유키카제 - [C:4]
+19=이세계 약국 - [C:4]
 
 
 [RenameSearchFind]
-0="[Shiniori-Raws] "
-1=^.{7}
-2=mun
-3=bat
-4=" (2)"
-5=占쏙옙
-6=[VON]
-7=w
-8=A
-9=w1
-10=w4
-11=w3
-12=w2
-13=W1
-14=W4
-15=W3
-16=W2
-17=0w
-18=o
-19=ass
+0="[Fix-Fontsizecolor] "
+1="[VCB-Studio] "
+2=(\d+)
+3="[Shiniori-Raws] "
+4=^.{7}
+5=mun
+6=bat
+7=" (2)"
+8=占쏙옙
+9=[VON]
+10=w
+11=A
+12=w1
+13=w4
+14=w3
+15=w2
+16=W1
+17=W4
+18=W3
+19=W2
 
 
 [RenameSearchReplace]
