--- a/GHISLER/CONFIG/Selection.ini
+++ b/GHISLER/CONFIG/Selection.ini
@@ -1,21 +1,22 @@
 [Selection]
-0=*.flac
-1=*.wav
-2=*.*
-3=*.jpg
-4=*.mp3
-5=*.xml
-6=*,xml
-7=*.smi
-8=*.ttf
-9=*.txt
-10=*.otf
-11=*.png
-12=*.bar
-13=*.ico
-14=*.icl
-15=|*\
-16=|*
-17=*.mun
-18=*.dll
-19=*.exe
+0=*.zip
+1=*.*
+2=*.flac
+3=*.wav
+4=*.jpg
+5=*.mp3
+6=*.xml
+7=*,xml
+8=*.smi
+9=*.ttf
+10=*.txt
+11=*.otf
+12=*.png
+13=*.bar
+14=*.ico
+15=*.icl
+16=|*\
+17=|*
+18=*.mun
+19=*.dll
+20=*.exe
